--- a/parttimejobs/src/main/res/layout/activity_parttimejob.xml
+++ b/parttimejobs/src/main/res/layout/activity_parttimejob.xml
@@ -1,117 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <include layout="@layout/topbar" />
+    android:background="@color/bg_color">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:layout_height="match_parent"
         android:orientation="vertical">
+        <include layout="@layout/topbar" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/padding_small"
-            android:background="@drawable/edittext_bg"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:padding="@dimen/padding_small">
-
-            <EditText
-                android:id="@+id/et_career"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@color/transparent"
-                android:hint="请输入关键字" />
-
-            <ImageButton
-                android:id="@+id/ib_clear"
-                android:layout_width="20dip"
-                android:layout_height="20dip"
-                android:background="@color/transparent"
-                android:scaleType="fitCenter"
-                android:src="@drawable/icon_clear"
-                android:visibility="invisible" />
-
+            android:background="@color/white"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/ll_search"
-                android:layout_width="wrap_content"
-                android:layout_height="30dip"
-                android:layout_marginLeft="@dimen/padding_small"
-                android:background="@drawable/button_bg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/padding_small"
+                android:background="@drawable/edittext_bg"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/padding_small"
-                android:paddingRight="@dimen/padding_small">
+                android:padding="@dimen/padding_small">
 
-                <ImageView
-                    android:id="@+id/iv_search"
+                <EditText
+                    android:id="@+id/et_career"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@color/transparent"
+                    android:hint="请输入关键字" />
+
+                <ImageButton
+                    android:id="@+id/ib_clear"
                     android:layout_width="20dip"
                     android:layout_height="20dip"
-                    android:background="@mipmap/fdj28" />
+                    android:background="@color/transparent"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/icon_clear"
+                    android:visibility="invisible" />
 
-                <TextView
+
+                <LinearLayout
+                    android:id="@+id/ll_search"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dip"
                     android:layout_marginLeft="@dimen/padding_small"
-                    android:text="搜索"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/text_default" />
+                    android:background="@drawable/button_bg"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingLeft="@dimen/padding_small"
+                    android:paddingRight="@dimen/padding_small">
+
+                    <ImageView
+                        android:id="@+id/iv_search"
+                        android:layout_width="20dip"
+                        android:layout_height="20dip"
+                        android:background="@mipmap/fdj28" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/padding_small"
+                        android:text="搜索"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/text_default" />
+                </LinearLayout>
+
             </LinearLayout>
 
         </LinearLayout>
 
-    </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/padding_small"
+            android:background="@color/bg_color" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/padding_small"
-        android:background="@color/bg_color" />
+        <cn.goodjobs.common.view.ExpandTabSuper.ExpandTabView
+            android:id="@+id/etv_career"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/space_40"></cn.goodjobs.common.view.ExpandTabSuper.ExpandTabView>
 
-    <cn.goodjobs.common.view.ExpandTabSuper.ExpandTabView
-        android:id="@+id/etv_career"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/space_40"></cn.goodjobs.common.view.ExpandTabSuper.ExpandTabView>
+        <View style="@style/line" />
 
-    <View style="@style/line" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <in.srain.cube.views.ptr.PtrClassicFrameLayout
-            android:id="@id/load_more_list_view_ptr_frame"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <in.srain.cube.views.ptr.loadmore.LoadMoreListViewContainer
-                android:id="@id/load_more_list_view_container"
+            <in.srain.cube.views.ptr.PtrClassicFrameLayout
+                android:id="@id/load_more_list_view_ptr_frame"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#ffffff">
+                android:layout_height="match_parent">
 
-                <ListView
-                    android:id="@id/list_view"
+                <in.srain.cube.views.ptr.loadmore.LoadMoreListViewContainer
+                    android:id="@id/load_more_list_view_container"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:divider="@null"
-                    android:fadingEdge="none"
-                    android:listSelector="@android:color/transparent"
-                    android:scrollbarStyle="outsideOverlay" />
+                    android:background="#ffffff">
 
-            </in.srain.cube.views.ptr.loadmore.LoadMoreListViewContainer>
-        </in.srain.cube.views.ptr.PtrClassicFrameLayout>
+                    <ListView
+                        android:id="@id/list_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:divider="@null"
+                        android:fadingEdge="none"
+                        android:listSelector="@android:color/transparent"
+                        android:scrollbarStyle="outsideOverlay" />
 
-        <cn.goodjobs.common.view.empty.EmptyLayout
-            android:id="@+id/empty_view"
+                </in.srain.cube.views.ptr.loadmore.LoadMoreListViewContainer>
+            </in.srain.cube.views.ptr.PtrClassicFrameLayout>
+
+            <cn.goodjobs.common.view.empty.EmptyLayout
+                android:id="@+id/empty_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="invisible"></cn.goodjobs.common.view.empty.EmptyLayout>
+        </RelativeLayout>
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/tipLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:background="#aa000000"
+        android:visibility="invisible">
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="invisible"></cn.goodjobs.common.view.empty.EmptyLayout>
+            android:layout_height="300dp"
+            android:src="@drawable/tip_change"
+            android:layout_marginRight="4dip"
+            android:layout_marginTop="8dip"
+            android:scaleType="fitEnd"/>
     </RelativeLayout>
-</LinearLayout>
+</RelativeLayout>
