--- a/headhuntingjob/src/main/res/layout/activity_headhunting.xml
+++ b/headhuntingjob/src/main/res/layout/activity_headhunting.xml
@@ -1,89 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_color"
-    android:orientation="vertical">
-
-    <include layout="@layout/topbar" />
+    android:background="@color/bg_color">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <include layout="@layout/topbar" />
 
-        <TextView
-            android:id="@+id/tv_headhunt"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:padding="@dimen/padding_small"
-            android:text="猎头职位"
-            android:textColor="@color/main_color"
-            android:textSize="@dimen/text_default" />
+            android:background="@color/white"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_reward"
+            <TextView
+                android:id="@+id/tv_headhunt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="@dimen/padding_small"
+                android:text="猎头职位"
+                android:textColor="@color/main_color"
+                android:textSize="@dimen/text_default" />
+
+            <TextView
+                android:id="@+id/tv_reward"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="@dimen/padding_small"
+                android:text="悬赏职位"
+                android:textColor="@color/main_color"
+                android:textSize="@dimen/text_default" />
+
+            <TextView
+                android:id="@+id/tv_agency"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="@dimen/padding_small"
+                android:text="代理招聘"
+                android:textColor="@color/main_color"
+                android:textSize="@dimen/text_default" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:padding="@dimen/padding_small"
-            android:text="悬赏职位"
-            android:textColor="@color/main_color"
-            android:textSize="@dimen/text_default" />
+            android:layout_height="3dip"
+            android:background="@color/white"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_agency"
+            <TextView
+                android:id="@+id/tv_line1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/topbar_bg" />
+
+            <TextView
+                android:id="@+id/tv_line2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/topbar_bg"
+                android:visibility="invisible" />
+
+            <TextView
+                android:id="@+id/tv_line3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/topbar_bg"
+                android:visibility="invisible" />
+        </LinearLayout>
+
+        <View style="@style/line" />
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vp_headhunt"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:padding="@dimen/padding_small"
-            android:text="代理招聘"
-            android:textColor="@color/main_color"
-            android:textSize="@dimen/text_default" />
-
+            android:layout_height="match_parent" />
     </LinearLayout>
 
-
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/tipLayout"
         android:layout_width="match_parent"
-        android:layout_height="3dip"
-        android:background="@color/white"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_line1"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:background="#aa000000"
+        android:visibility="invisible">
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@color/topbar_bg" />
+            android:layout_height="300dp"
+            android:src="@drawable/tip_change"
+            android:layout_marginRight="4dip"
+            android:layout_marginTop="8dip"
+            android:scaleType="fitEnd"/>
+    </RelativeLayout>
 
-        <TextView
-            android:id="@+id/tv_line2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@color/topbar_bg"
-            android:visibility="invisible" />
-
-        <TextView
-            android:id="@+id/tv_line3"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@color/topbar_bg"
-            android:visibility="invisible" />
-    </LinearLayout>
-
-    <View style="@style/line" />
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/vp_headhunt"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-</LinearLayout>
+</RelativeLayout>
