--- a/bluecollar/src/main/res/layout/item_trend_top.xml
+++ b/bluecollar/src/main/res/layout/item_trend_top.xml
@@ -113,6 +113,7 @@
                     android:drawablePadding="2dip"
                     android:drawableLeft="@mipmap/img_makefriend_msg"
                     android:layout_marginLeft="@dimen/padding_small"
+                    android:visibility="gone"
                     android:background="@drawable/small_button_green"/>
             </LinearLayout>
         </LinearLayout>
