--- a/bluecollar/src/main/res/layout/activity_complain.xml
+++ b/bluecollar/src/main/res/layout/activity_complain.xml
@@ -49,7 +49,7 @@
             android:layout_marginTop="@dimen/padding_default"
             android:background="@color/white"
             android:gravity="top"
-            android:hint="请尽量详情反应情况,以便我们及时正确的处理你的举报(最多200字)"
+            android:hint="投诉内容请如实填写，不超过200字"
             android:maxLength="200"
             android:minHeight="150dip"
             android:padding="@dimen/line_padding"
@@ -84,9 +84,10 @@
 
             <CheckBox
                 android:id="@+id/rb1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:button="@drawable/checkbox_bg"
+                android:layout_width="20dip"
+                android:layout_height="20dip"
+                android:background="@drawable/checkbox_bg"
+                android:button="@null"
                 android:textColor="@color/main_color"/>
 
             <TextView
@@ -109,9 +110,10 @@
 
             <CheckBox
                 android:id="@+id/rb2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:button="@drawable/checkbox_bg"
+                android:layout_width="20dip"
+                android:layout_height="20dip"
+                android:background="@drawable/checkbox_bg"
+                android:button="@null"
                 android:textColor="@color/main_color"/>
 
             <TextView
@@ -136,9 +138,10 @@
             <CheckBox
 
                 android:id="@+id/rb3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:button="@drawable/checkbox_bg"
+                android:layout_width="20dip"
+                android:layout_height="20dip"
+                android:background="@drawable/checkbox_bg"
+                android:button="@null"
                 android:textColor="@color/main_color"/>
 
             <TextView
