--- a/common/src/main/res/layout/activity_login.xml
+++ b/common/src/main/res/layout/activity_login.xml
@@ -1,49 +1,53 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/bg_color">
+    android:background="@color/bg_color"
+    android:orientation="vertical">
 
-    <include layout="@layout/actionbar"/>
+    <include layout="@layout/actionbar" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="@dimen/padding_default">
+        android:layout_margin="@dimen/padding_default"
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="44dip"
-            android:orientation="horizontal"
             android:layout_marginTop="@dimen/padding_small"
-            android:background="@drawable/login_edit_bg">
+            android:background="@drawable/login_edit_bg"
+            android:orientation="horizontal">
+
             <ImageView
                 android:layout_width="44dip"
                 android:layout_height="44dip"
-                android:src="@drawable/icon_user"
-                android:scaleType="fitCenter"
+                android:background="#d0d0d0"
                 android:padding="@dimen/padding_small"
-                android:background="#d0d0d0"/>
+                android:scaleType="fitCenter"
+                android:src="@drawable/icon_user" />
+
             <EditText
+                android:id="@+id/etUser"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:id="@+id/etUser"
-                android:inputType="textEmailAddress"
-                android:textColor="@color/main_color"
-                android:textColorHint="@color/light_color"
-                android:hint="请输入用户名"
                 android:background="@color/transparent"
-                android:paddingLeft="@dimen/padding_small"/>
+                android:hint="请输入用户名"
+                android:inputType="textEmailAddress"
+                android:paddingLeft="@dimen/padding_small"
+                android:textColor="@color/main_color"
+                android:textColorHint="@color/light_color" />
+
             <ImageButton
                 android:id="@+id/btnClearUser"
                 android:layout_width="22dip"
                 android:layout_height="match_parent"
-                android:src="@drawable/icon_clear"
-                android:scaleType="fitCenter"
-                android:visibility="invisible"
                 android:background="@color/transparent"
-                android:paddingRight="@dimen/padding_small"/>
+                android:paddingRight="@dimen/padding_small"
+                android:scaleType="fitCenter"
+                android:src="@drawable/icon_clear"
+                android:visibility="invisible" />
         </LinearLayout>
 
         <LinearLayout
@@ -51,33 +55,36 @@
             android:layout_height="44dip"
             android:layout_marginTop="@dimen/padding_small"
             android:background="@drawable/login_edit_bg">
+
             <ImageView
                 android:layout_width="44dip"
                 android:layout_height="44dip"
-                android:src="@drawable/icon_password"
-                android:scaleType="fitCenter"
+                android:background="#d0d0d0"
                 android:padding="@dimen/padding_small"
-                android:background="#d0d0d0"/>
+                android:scaleType="fitCenter"
+                android:src="@drawable/icon_password" />
+
             <EditText
+                android:id="@+id/etPassword"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:id="@+id/etPassword"
-                android:hint="请输入密码"
-                android:textColor="@color/main_color"
-                android:textColorHint="@color/light_color"
-                android:inputType="textPassword"
                 android:background="@color/transparent"
-                android:paddingLeft="@dimen/padding_small"/>
+                android:hint="请输入密码"
+                android:inputType="textPassword"
+                android:paddingLeft="@dimen/padding_small"
+                android:textColor="@color/main_color"
+                android:textColorHint="@color/light_color" />
+
             <ImageButton
                 android:id="@+id/btnClearPwd"
                 android:layout_width="22dip"
                 android:layout_height="match_parent"
-                android:src="@drawable/icon_clear"
-                android:scaleType="fitCenter"
-                android:visibility="invisible"
                 android:background="@color/transparent"
-                android:paddingRight="@dimen/padding_small"/>
+                android:paddingRight="@dimen/padding_small"
+                android:scaleType="fitCenter"
+                android:src="@drawable/icon_clear"
+                android:visibility="invisible" />
 
         </LinearLayout>
 
@@ -87,23 +94,25 @@
             android:layout_marginTop="@dimen/padding_default"
             android:gravity="center_vertical"
             android:orientation="horizontal">
+
             <CheckBox
                 android:id="@+id/checkbox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="自动登录"
                 android:checked="true"
-                android:textColor="@color/main_color"/>
+                android:text="自动登录"
+                android:textColor="@color/main_color" />
+
             <TextView
                 android:id="@+id/btnRegister"
-                android:clickable="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="点击注册"
                 android:background="@color/transparent"
-                android:textSize="@dimen/text_small"
-                android:textColor="@color/topbar_bg" />
+                android:clickable="true"
+                android:text="点击注册"
+                android:textColor="@color/topbar_bg"
+                android:textSize="@dimen/text_small" />
         </LinearLayout>
 
 
@@ -112,32 +121,35 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/button_height"
             android:layout_marginTop="@dimen/padding_small"
-            android:onClick="doLogin"
-            android:background="@drawable/button_bg">
+            android:background="@drawable/button_bg"
+            android:onClick="doLogin">
+
             <TextView
                 android:id="@+id/textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
                 android:text="登录"
-                android:textColor="@color/white"
-                android:layout_centerInParent="true"/>
+                android:textColor="@color/white" />
 
             <ProgressBar
                 android:id="@+id/progressBar"
                 android:layout_width="20dip"
                 android:layout_height="20dip"
-                android:layout_toLeftOf="@id/textview"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="@dimen/padding_small"
-                android:visibility="invisible"/>
+                android:layout_toLeftOf="@id/textview"
+                android:visibility="invisible" />
         </RelativeLayout>
+
         <TextView
+            android:id="@+id/tv_found"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/padding_small"
-            android:text="忘记密码？"
             android:background="@color/transparent"
-            android:textSize="@dimen/text_small"
-            android:textColor="@color/topbar_bg" />
+            android:text="忘记密码？"
+            android:textColor="@color/topbar_bg"
+            android:textSize="@dimen/text_small" />
     </LinearLayout>
 </LinearLayout>
