--- a/parttimejobs/src/main/res/layout/fragment_partjob_details.xml
+++ b/parttimejobs/src/main/res/layout/fragment_partjob_details.xml
@@ -60,6 +60,12 @@
                     android:layout_height="wrap_content"
                     listitem:tvtitle="工作地点："></cn.goodjobs.common.view.PartTimeItemView>
 
+                <cn.goodjobs.common.view.PartTimeItemView
+                    android:id="@+id/piv_worktime"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    listitem:tvtitle="工作时间："></cn.goodjobs.common.view.PartTimeItemView>
+
                 <View style="@style/line" />
 
                 <cn.goodjobs.common.view.PartTimeItemView
