--- a/common/src/main/res/layout/list_parttime_item.xml
+++ b/common/src/main/res/layout/list_parttime_item.xml
@@ -1,33 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:padding="@dimen/padding_small"
+    android:layout_height="match_parent"
     android:gravity="center_vertical"
-    android:layout_height="match_parent">
+    android:orientation="horizontal"
+    android:padding="@dimen/padding_small">
 
     <TextView
         android:id="@+id/tv_parttitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="悬赏职位："
         android:layout_marginLeft="@dimen/padding_small"
+        android:text="悬赏职位："
         android:textColor="@color/main_color"
-        android:textSize="@dimen/text_default"/>
+        android:textSize="@dimen/text_default" />
 
     <TextView
         android:id="@+id/tv_content"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_marginLeft="@dimen/padding_small"
-        android:textSize="@dimen/text_default"
-        android:textColor="@color/main_color"/>
+        android:textColor="@color/main_color"
+        android:textSize="@dimen/text_default" />
+
     <ImageView
         android:id="@+id/iv_call"
         android:layout_width="25dip"
         android:layout_height="25dip"
+        android:layout_marginLeft="@dimen/padding_small"
         android:layout_marginRight="@dimen/padding_small"
-        android:background="@drawable/icon_call_yellow"/>
+        android:background="@drawable/icon_call_yellow" />
 
 </LinearLayout>
