修改公司详情，没有值不显示

--- a/bluecollar/src/main/res/layout/activity_bluejobcompany_detail.xml
+++ b/bluecollar/src/main/res/layout/activity_bluejobcompany_detail.xml
@@ -217,6 +217,7 @@
 
 
                 <LinearLayout
+                    android:id="@+id/com_content_box"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/padding_small"
