--- a/applyjobs/src/main/res/layout/activity_jobcompany_detail.xml
+++ b/applyjobs/src/main/res/layout/activity_jobcompany_detail.xml
@@ -263,6 +263,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/com_content_box"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/padding_small"
@@ -285,8 +286,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/space_10"
-                        android:maxLines="5"
                         android:lineSpacingMultiplier="1.3"
+                        android:maxLines="5"
                         android:textColor="@color/main_color"
                         android:textSize="@dimen/text_small"></TextView>
 
