--- a/applyjobs/src/main/res/layout/activity_apply_jobs.xml
+++ b/applyjobs/src/main/res/layout/activity_apply_jobs.xml
@@ -36,7 +36,7 @@
                 android:id="@+id/btnText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/text_small"
+                android:textSize="@dimen/text_litter"
                 android:textColor="@drawable/a_footer_text"
                 android:layout_marginTop="@dimen/bottom_menu_top"
                 android:text="首页"
@@ -62,7 +62,7 @@
                 android:id="@id/btnText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/text_small"
+                android:textSize="@dimen/text_litter"
                 android:textColor="@drawable/a_footer_text"
                 android:layout_marginTop="@dimen/bottom_menu_top"
                 android:text="职位搜索"
@@ -88,7 +88,7 @@
                 android:id="@id/btnText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/text_small"
+                android:textSize="@dimen/text_litter"
                 android:textColor="@drawable/a_footer_text"
                 android:layout_marginTop="@dimen/bottom_menu_top"
                 android:text="新安资讯"
@@ -114,7 +114,7 @@
                 android:id="@id/btnText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/text_small"
+                android:textSize="@dimen/text_litter"
                 android:textColor="@drawable/a_footer_text"
                 android:layout_marginTop="@dimen/bottom_menu_top"
                 android:text="个人中心"
