--- a/bluecollar/src/main/res/layout/fragment_blue_home.xml
+++ b/bluecollar/src/main/res/layout/fragment_blue_home.xml
@@ -87,6 +87,7 @@
                     android:id="@+id/historyLayout2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingTop="@dimen/padding_small"
                     android:background="@color/white"
                     android:orientation="horizontal"
                     android:paddingBottom="@dimen/padding_small"
