--- a/common/src/main/res/layout/v_multi_menu_choose_item.xml
+++ b/common/src/main/res/layout/v_multi_menu_choose_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
           android:layout_width="match_parent"
-          android:layout_height="@dimen/expand_tab_item_height"
+          android:layout_height="wrap_content"
+          android:minHeight="@dimen/expand_tab_item_height"
           android:layout_marginRight="20dip"
           android:background="@drawable/choose_first_level_item_selector"
           android:gravity="center_vertical"
